--- a/style.css
+++ b/style.css
@@ -61,25 +61,58 @@ button:hover {
     transform: scale(1.2);
 }
 
-#google_translate_element {
+.sidebar {
+    height: 100%;
+    width: 0;
+    position: fixed;
+    top: 0;
+    left: 0;
+    background-color: rgba(0, 0, 0, 0.9);
+    overflow-x: hidden;
+    transition: 0.5s;
+    padding-top: 60px;
+    z-index: 1001;
+}
+
+.sidebar a {
+    padding: 10px 15px;
+    text-decoration: none;
+    font-size: 18px;
+    color: white;
+    display: block;
+    transition: 0.3s;
+}
+
+.sidebar a:hover {
+    background-color: #575757;
+}
+
+.sidebar .closebtn {
+    position: absolute;
+    top: 0;
+    right: 10px;
+    font-size: 36px;
+}
+
+.openbtn {
+    font-size: 20px;
+    cursor: pointer;
+    background-color: black;
+    color: white;
+    padding: 10px 15px;
+    border: none;
+    border-radius: 5px;
     position: fixed;
     top: 10px;
-    right: 10px;
-    z-index: 1000;
-    background-color: rgba(0, 0, 0, 0.7);
-    padding: 5px;
-    border-radius: 5px;
+    left: 10px;
+    z-index: 1002;
 }
 
-.goog-te-banner-frame.skiptranslate {
-    display: none !important;
+#google_translate_element {
+    margin: 20px 0;
 }
 
-body {
-    top: 0px !important; 
-}
-
-.goog-te-gadget {
-    font-size: 12px;
-    color: white;
+header {
+    padding: 50px;
+    margin-top: 50px;
 }
